frontend/src/App.css
/* ... */
.ticket-tables-body {
  display: flex;
  justify-content: start;
  flex-direction: row;
  align-items: start;
  width: 100%;
  height: 100%;
  background-color: #ffffff;
  margin-top: 10px;
 
}

.ticket-table-sidebar{
  width: 220px;
 height: 94%;
 padding: 12px 10px;
 box-shadow: 
  0 4px 8px 0 rgba(0, 0, 0, 0.1),
  0 6px 20px 0 rgba(0, 0, 0, 0.1);
 border-radius: 8px; 
 height: 400px;
}

.sidebar-table-filters {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: auto;
  background-color: transparent;
  color: #1c1c1c;
  border-bottom: #e9e9e9 solid 1px;
}

.sidebar-table-body{
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  width: 100%;
  height: auto;
  background-color: transparent;
  color: #1c1c1c;
}

.filters-list{
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  width: 200px;
  height: auto;
  background-color: transparent;
  color: #1c1c1c;
}

.filter-item{
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  width: 200px;
  height: auto;
  font-weight: 500;
  font-size: 16px;
  background-color: transparent;
  color: #1c1c1c;
  padding: 0px 10px;
  border: none;
  cursor: pointer;
  gap: 0px;
  border-bottom: #e9e9e9 solid 1px;
}


.open-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap:5px;

}

.inProgress-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap:5px;

}

.resolved-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap:5px;

}

.closed-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap:5px;

}

.filter-num{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width:185px;
  
}

.filter-item-2 {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  width: 200px;
  height:30px;
  font-weight: 500;
  font-size: 14px;
  background-color: transparent;
  color: #1c1c1c;
  padding: 0px 10px;
  border:#e4e4e4 solid 1px;
  cursor: pointer;
  border-radius: 7px;
  gap: 0px;
  
}

table{
  
  width: 100%;
  border-collapse: collapse;
  background-color: #ffffff;

}

.table thead th,
.table th,
.table td {
  border-bottom: #e9e9e9 solid 1px;
  padding: 10px;
  text-align: left;
  border-radius: 5px;
}

.table td{
  
  padding: 10px;
  text-align: left;
  border-radius: 5px;
  height: 40px;
}

.table > tbody {
  border-top: 0 !important;
}
/* Urgency */

.sidebar-table-filters{
    display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: auto;
  background-color: transparent;
  color: #1c1c1c;
}

.filter-num-1 {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap:0px;
    justify-content: space-between;
    width: 185px;
}

.filter-item-1 {
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: start;
    width: 200px;
    height: auto;
    font-weight: 500;
    font-size: 16px;
    background-color: transparent;
    color: #1c1c1c;
    padding: 0px 10px;
    border: none;
    cursor: pointer;
    gap: 0px;
    border-bottom: #e9e9e9 solid 1px;
}

.sidebar-table-filter-1{
  display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: auto;
    background-color: transparent;
    color: #1c1c1c;

}

.high-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap:5px;

}

.medium-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap:5px;

}

.low-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap:5px;

}

.critical-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap:5px;

}

.ticket-table-main{
  display: flex;
  justify-content: start;
  flex-direction: column;
  align-items: start;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1),
    0 6px 20px 0 rgba(0, 0, 0, 0.1);
  width: 100%;
  height: 100%;
  background-color: transparent;
  margin-left: 20px;
  border-radius: 8px;
}

.ticket-table-main-body {
  width: 100%;
  height: auto;
  background-color: transparent;
  margin-top: 10px;
  padding: 10px;
}

.ticket-table-main{
  display: flex;
  justify-content: start;
  flex-direction: column;
  align-items: start;
  width: 100%;
  height: auto;
  background-color: transparent;
}

.ticket-table-main-header{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: auto;
  padding: 10px 10px 0px 10px;
  background-color: transparent;
}

#sort-order {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  width: 9%;
  height: 10px;
  margin-left: 10px;
  padding: 5px 10px;
  border-radius: 5px;
  border: none;
  box-shadow:0 6px 20px 0 rgba(0, 0, 0, 0.1),
   0 4px 8px 0 rgba(0, 0, 0, 0.1),
    0 6px 20px 0 rgba(0, 0, 0, 0.0);
  height: auto;
  background-color: transparent;
}



.ticket-table-main-body{
  width: 100%;
  padding: 0px 10px 10px 10px;
}

#subject-category {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  width: 100%;
  height: auto;
  background-color: transparent;
  color: #1c1c1c;
  font-weight: 500;
}

.ticket-table-footer {
  display: flex;
  justify-content: end;
  align-items: center;
  width: 100%;
  height: 50px;
  padding: 0px 0px 20px 0px;
}

#pagination-btn{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 30px;
  height: 30px;
  background-color: #0a0044;
  color: #ffffff;
  border-radius: 12px;
  margin:5px 5px 0px 5px;
}
/* ... */

